--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/client/node_modules
+/client/.prettierrc
+/server/node_modules
+/server/.prettierrc
 /.pnp
 .pnp.js
 
