--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
     "axios": "^0.21.1",
     "craco-antd": "^1.18.1",
     "craco-less": "^1.17.0",
+    "fs": "0.0.1-security",
     "less-loader": "^6.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-gallery-carousel": "^0.1.3",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3"
